# m1ri

./: .gitignore  COPYING  GNU GENERAL PUBLIC LICENSE version 2  Makefile  Makefile.am  Makefile.in  NEWS  addingproofofconcept.c  arithmatic_test  classesfall.txt  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  h.c  hadamard  libm1ri.la  libtool  m1ri.pc  m1ri.pc.in  m1rigf3.c  m1rigf3.h  m3d_create_test  m3d_functions  m3d_mul_benchmark  m5d_tests  m7d_tests  matrix prototypes  simplebitpackingunions.c  subractiong_gf3_proofofconcept.c  test_arithmetic.c alias  test_m3d.c alias  tooclean
.deps/: hadamard.Po  m1ri_3dt.Plo  m1ri_classical.Plo  m1ri_combine.Plo  m1ri_cubes.Plo  m1ri_io.Plo  m1ri_small.Plo  m1ri_strassen.Plo  m1riarith.Plo  m3d_create_test.Po  m3d_functions.Po  m5d.Plo  m5d_tests.Po  m7d.Plo  m7d_tests.Po  misc.Plo
.libs/: hadamard  libm1ri-0.0.1.dylib  libm1ri.dylib  libm1ri.la  libm1ri.lai  m3d_create_test  m3d_functions  m3d_mul_benchmark  m5d_tests  m7d_tests
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
bench/: benchmark.c   m3d_mul_benchmark.c  makefile.am
m1ri/: combinem1ri.h  config.h  config.h.in  config.h.in~  m1ri.c  m1ri.h  m1ri_3dt.c  m1ri_3dt.h  m1ri_3dt.lo  m1ri_classical.c  m1ri_classical.h  m1ri_classical.lo  m1ri_combine.c  m1ri_combine.h  m1ri_combine.lo  m1ri_config.h  m1ri_config.h.in  m1ri_cubes.c  m1ri_cubes.h  m1ri_cubes.lo  m1ri_decom.c  m1ri_decom.h  m1ri_io.c  m1ri_io.h  m1ri_io.lo  m1ri_permutations.c  m1ri_permutations.h  m1ri_small.c  m1ri_small.h  m1ri_small.lo  m1ri_strassen.c  m1ri_strassen.h  m1ri_strassen.lo  m1ri_test.c  m1riarith.c  m1riarith.h  m1riarith.lo  m1riclassic.h  m1rigf3.h  m1ristrassen.h  (+17 more)
m1ri/.deps/: m1ri_3dt.Plo  m1ri_classical.Plo  m1ri_combine.Plo  m1ri_cubes.Plo  m1ri_io.Plo  m1ri_small.Plo  m1ri_strassen.Plo  m1riarith.Plo  m5d.Plo  m7d.Plo  misc.Plo
m1rigf3/: m1ri_classical.h  m1ri_cubes.h  m1riclassic.h  m1rielarith.h  m1rigf3.1  m1rigf3.c  m1rigf3.h  m1rigf3combine.h  m1rigf3io.h  m1rigf3test.c  m1riwrappers.h  m5d.h  m7d.h  smallgf3.h  smallm1ri.h  strassen.h
m1rigf5/: m1rigf5.1  m1rigf5.c  m1rigf5.h
m1rigf7/: m1rigf7.1  m1rigf7.c  m1rigf7.h
m4/: ax_cache_size.m4  ax_cache_size_tune.m4  ax_openmp.m4
tests/: Makefile  Makefile.in  arithmatic_test.c  hadamard.c  m3d_arith.c  m3d_create_test.c  m3d_functions.c  m3d_mul_benchmark.c  m5d_tests.c  m7d_tests.c  swap_test.c  test_arithmetic.c  test_create_m3d.c  test_decom.c  test_hadamard.c  test_m3d.c  test_m5d.c  test_m7d.c  test_multiply.c  test_permutations.c  tests.c
tests/.deps/: hadamard.Po  m3d_create_test.Po  m3d_functions.Po  m5d_tests.Po  m7d_tests.Po
